--- a/package.json
+++ b/package.json
@@ -4,10 +4,18 @@
   "version": "0.0.0",
   "author": "Wilfred Denton @wilfreddenton",
   "dependencies": {
+    "biff": "^0.2.0",
+    "body-parser": "^1.13.2",
+    "cookie-parser": "^1.3.5",
+    "express": "^4.13.1",
     "lodash": "^3.10.0",
+    "marked": "^0.3.3",
     "mcfly": "0.0.10",
+    "moment": "^2.10.3",
     "react": "^0.13.3",
-    "react-router": "^0.13.3"
+    "react-router": "^0.13.3",
+    "request": "^2.58.0",
+    "rsvp": "^3.0.18"
   },
   "devDependencies": {
     "browserify": "^10.2.4",
@@ -15,6 +23,8 @@
     "gulp-clean": "^0.3.1",
     "gulp-jshint": "^1.11.2",
     "gulp-livereload": "^3.8.0",
+    "gulp-nodemon": "^2.0.3",
+    "gulp-notify": "^2.2.0",
     "gulp-rimraf": "^0.1.1",
     "gulp-sass": "^2.0.4",
     "gulp-watch": "^4.3.3",
