--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react": "^0.13.3",
     "react-router": "^0.13.3",
     "request": "^2.58.0",
-    "rsvp": "^3.0.18"
+    "rsvp": "^3.0.18",
+    "socket.io": "^1.3.6",
+    "socket.io-client": "^1.3.6"
   },
   "devDependencies": {
     "browserify": "^10.2.4",
